# forgeos-n4pro

./: .cursorignore  .gitignore  README.md  RESUME_ME.txt  SESSION_HANDOFF.md  pyproject.toml  requirements.txt
artifacts/: PHASE1_ACCEPTANCE_MEASURE.md  PHASE1_RESULTS.md  SESSION_HANDOFF_20260714.md  g3_closeout_plan.md  g3_measure_20260714.json  gate_report.json  phase1_mesh_report.json  phase1_report.json  saved_state_shop_n4pro.json  session_live_snapshot.json  vision_adaptive_state.json  vision_rt_journal.jsonl  zero_vision_journal.jsonl  zero_vision_state.json
configs/: neptune4pro.yaml  saved_state_shop_n4pro.yaml  vision_rig.yaml  zero_vision_adaptive.yaml
docs/: ADB_FILM_HUD.md  BOM_GOD_TIER_VISION_RIG.md  CALIBRATION_SUITE.md  CLOUD_SSH_BRIDGE.md  COMPUTER_USE.md  FILM_SWARM.md  FIRST_LAYER_FIX.md  FLAT_FIRST_LAYER.md  FL_COMPARE_TEST.md  LOCAL_CNC_BENCH.md  LOCAL_GROK_LIVE_ENGINEERING_PROMPT.md  MACHINE_FLAT_ZERO_IRON.md  MAC_EFFICIENT_WORKFLOW.md  MESH_SPEED.md  PHASE2_ACCEPTANCE.md  PHONE_AS_CAMERA.md  REALTIME_DYNAMIC_ML.md  RETRACT_WIPE_OOZE.md  STACK_PEX_BROZZL_PROTOPASTA.md  SYMBIOSIS.md  TESTING_SHEET.md  VISION_ML_JETSON_STACK.md  ZERO_VISION_10K.md  calibration_protocol.md  environment_homeostasis.md  hardware_upgrades.md  moisture_soft_sensor.md  physics_model.md  protopasta_htpla.md  zero_trust_gates.md
environments/: basement_default.yaml  basement_enclosed.yaml  garage_hot_dry.yaml
forgeos/: __init__.py  extrusion_motion.py  flat_surface.py  gcode_physics.py  journal.py  materials.py  moonraker_bus.py  moonraker_client.py  precision.py  (+2 more)
(+166 files in other folders)
