[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeos"
version = "0.2.0"
description = "ForgeOS — multi-objective process control for Neptune 4 Pro + Protopasta"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["forgeos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
